<resources>
    <string name="app_name">K.I.T.</string>
    <string name="app_title_agent">Агент</string>
    <string name="app_title_agents">Agents</string>
    <string name="app_title_supervisor">Супервайзер</string>
    <string name="app_title_supervisors">Супервайзеры</string>
    <string name="app_title_forwarder">Экспедитор</string>
    <string name="app_title_forwarders">Экспедиторы</string>
    <string name="app_title_packages">Посылки</string>
    <string name="app_title_boss">Руководитель</string>
    <string name="app_title_collector">Список кредиторов</string>
    <string name="app_title_tp">Торговые точки</string>
    <string name="app_title_all_tp">Все торговые точки</string>
    <string name="app_title_new_tp">Новая торговая точка</string>
    <string name="app_title_orders_history">История заказов</string>
    <string name="app_title_goods_list">Список товаров</string>
    <string name="app_title_delivery_list">Список доставок</string>
    <string name="app_title_selected_goods">Выбранные товары</string>
    <string name="app_title_input_cash">Ввод денежных средств</string>
    <string name="app_title_packer">Сборщик</string>
    <string name="app_title_warehouse_manager">Заведующий складом</string>
    <string name="app_made_orders">Созданные заказы</string>
    <string name="dialog_text_permission">Вам необходимо предоставить разрешение на использование %s</string>
    <string name="dialog_text_location">
        На Вашем телефоне отключёно определение местоположения, либо
        включён только один из источников определения местоположения.
    </string>
    <string name="dialog_text_need_relogin">Вам необходимо заново выполнить авторизацию в системе</string>
    <string name="dialog_text_mock_is_using">
        На телефоне используется приложение, мешаюшее определить точное местоположение.
    </string>
    <string name="dialog_text_saving">Сохраняется на телефоне</string>
    <string name="dialog_text_sending">Отправка заказа</string>
    <string name="dialog_text_sending2">Отправка оповещения</string>
    <string name="dialog_text_req_coordinates">Запрос координат…</string>
    <string name="dialog_text_ask_to_delete_goods">Вы уверены, что хотите удалить этот товар?</string>
    <string name="dialog_text_ask_to_delete_comp">Вы уверены, что хотите удалить информацию по конкуренту?</string>
    <string name="dialog_text_ask_to_delete_cash">Вы уверены, что хотите удалить информацию по ден.средствам?</string>
    <string name="dialog_text_load_price">Загрузка цен…</string>
    <string name="dialog_text_load_bus_regions">Загрузка бизнес регионов…</string>
    <string name="dialog_text_load_price_type">Загрузка типов цен…</string>
    <string name="dialog_text_load_price_type_updateTime">Загрузка дату последнего изменения вид цен…</string>
    <string name="dialog_text_load_documents">Чтение сохраненённых документов и пересчёт цен…</string>
    <string name="dialog_text_load_product">Загрузка товаров…</string>
    <string name="dialog_text_load_discount">Загрузка скидок/акций…</string>
    <string name="dialog_text_load_data">Загрузка данных…</string>
    <string name="dialog_text_prepare_to_make_order">Подготовка к созданию заказа…</string>
    <string name="dialog_text_prepare_to_edit_order">Подготовка к редактированию заказа…</string>
    <string name="dialog_text_ask_to_exit">Вы действительно хотите выйти из приложения?</string>
    <string name="dialog_text_ask_to_logout">Вы действительно хотите выйти из учётной записи?</string>
    <string name="dialog_text_check_balance">Проверка баланса товара</string>
    <string name="dialog_text_calc_total_price">Производится расчёт общей стоимости товара</string>
    <string name="dialog_text_download_clients">Загрузка списка клиентов</string>
    <string name="dialog_text_authorization">Авторизация…</string>
    <string name="dialog_text_client_send">Отправка данных по клиенту…</string>
    <string name="dialog_text_req_order_details">Запрашиваются детали заказа…</string>
    <string name="dialog_text_check_credit">Проверка накопленного кредита…</string>
    <string name="dialog_text_bus_reg_empty">Необходимо выбрать бизнес регион</string>
    <string name="dialog_text_delivery_date_empty">Не указана дата доставки товара</string>
    <string name="dialog_text_goods_list_empty">Не выбраны товары</string>
    <string name="dialog_text_conf_del_order">Удалить «%1$s» с телефона?</string>
    <string name="dialog_text_sending_data">Отправка данных…</string>
    <string name="dialog_text_saving_data">Сохранение данных…</string>
    <string name="dialog_text_visits_is_empty">Не указаны данные визитов по кредиту</string>
    <string name="dialog_text_visits_date_is_empty">Не указана дата визита по кредиту</string>
    <string name="dialog_text_visits_sum_is_empty">Не указана сумма сбора по кредиту</string>
    <string name="dialog_text_visits_sum_mistake">Не указана вся сумма по сбору денег в кредит. Не указан остаток: </string>
    <string name="dlg_txt_kpi_load">Загрузка информации по KPI</string>
    <string name="dialog_refusal_hint">Выберите причину отказа</string>
    <string name="dialog_btn_cancel">Отмена</string>
    <string name="dialog_btn_setting">Настройки</string>
    <string name="dialog_btn_exit">Выход</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="e_field_required">Поле должно быть заполнено</string>
    <string name="e_field_required2">Поле «%1$s» должно быть заполнено</string>
    <string name="e_field_required3">Поле «Сумма» должно быть заполнено</string>
    <string name="e_field_required4">Поле «Курс» должно быть заполнено</string>
    <string name="hint_input_login">Введите Ваш логин</string>
    <string name="hint_input_password">Введите Ваш пароль</string>
    <string name="hint_input_count_of_goods">Укажите количество товара</string>
    <string name="hint_input_upload_date">день.месяц.год</string>
    <string name="hint_input_competitor_name">Наименование конкурента</string>
    <string name="hint_credit_visit_date">Дата платежа по кредиту</string>
    <string name="hint_credit_sum">Сумма сбора по кредиту</string>
    <string name="hint_input_goods">Товар конкурента</string>
    <string name="hint_input_price">Стоимость товара</string>
    <string name="hint_save_local">Сохранить заказ на телефоне</string>
    <string name="hint_save_local2">Временно сохранить на телефоне</string>
    <string name="hint_comment">Ваш комментарий</string>
    <string name="hint_tp_legal_name">Юридическое название торговой точки</string>
    <string name="hint_tp_signboard">Название магазина</string>
    <string name="hint_tp_inn">ИНН</string>
    <string name="hint_tp_address">Адрес доставки заказа</string>
    <string name="hint_tp_legal_address">Юридический адрес</string>
    <string name="hint_tp_reference_point">Ориентир</string>
    <string name="hint_tp_cp">Контактное лицо</string>
    <string name="hint_tp_cp_phone">Контактное лицо (номер телeфона)</string>
    <string name="hint_tp_type">Классификация точки</string>
    <string name="hint_tp_responsible">Ответственное лицо (номер телефона)</string>
    <string name="hint_label_sel_goods">○ Товары</string>
    <string name="hint_available">Количество доступного товара</string>
    <string name="hint_weight">Вес товара:</string>
    <string name="hint_capacity">Обьём товара:</string>
    <string name="hint_reach_limit">Внимание! Вы указали: %1$s кол.товара; Доступно: %2$s</string>
    <string name="hint_reach_limit_credit">Внимание! Вы превысили лимит кредита. Доступно: %1$s; Выбрано на сумму: %2$s</string>
    <string name="hint_attention">Внимание! Во время отправки заказа произошла ошибка: %1$s</string>
    <string name="hint_input_sum">Введите сумму</string>
    <string name="hint_input_rate">Введите курс</string>
    <string name="hint_without_series">Без серии</string>
    <string name="hint_cash_info">Сумма сбора: %1$s</string>
    <string name="hint_exc_total">Итого: %1$s</string>
    <string name="hint_cash">Наличные</string>
    <string name="hint_non_cash">Безналичные</string>
    <string name="hint_bonus">Бонус</string>
    <string name="hint_gift">Акция</string>
    <string name="btn_login">Войти</string>
    <string name="btn_task">Задачи</string>
    <string name="btn_agents">Агенты</string>
    <string name="btn_supervisors">Супервайзеры</string>
    <string name="btn_report">Форма Отчёта</string>
    <string name="btn_edit">Редактирование</string>
    <string name="btn_orders">созд-ые заказы</string>
    <string name="btn_start_work">создать заказ</string>
    <string name="btn_save">Сохранить</string>
    <string name="btn_send">Отправить</string>
    <string name="btn_agree">Подтвердить получение</string>
    <string name="btn_add_new_goods">Товары</string>
    <string name="btn_selected_goods">Выб. товары</string>
    <string name="btn_change_goods">Изменить</string>
    <string name="btn_add_new_comp">Доб-ть инф-ию по конкуренту</string>
    <string name="btn_add_new_visit">Доб-ть ещё один день визита</string>
    <string name="btn_call_agent">Позвонить агенту</string>
    <string name="btn_call_contr">Позвонить контрагенту</string>
    <string name="btn_delivered">Доставлен</string>
    <string name="btn_end_delivery">Завершить дос-ку</string>
    <string name="btn_on_the_way">В пути</string>
    <string name="btn_goods">Товары</string>
    <string name="btn_take_cash2">Сбор ден.средств</string>
    <string name="btn_take_cash">Сбор денежных средств</string>
    <string name="btn_just_agree">Подтвердить</string>
    <string name="btn_refusal">отказ</string>
    <string name="label_inn">• ИНН:</string>
    <string name="label_address">• Адрес:</string>
    <string name="label_agent">• Агент:</string>
    <string name="label_contact_person">• Конт-ое лицо:</string>
    <string name="label_contact_person_phone">• Номер телефона:</string>
    <string name="label_tp_type">• Тип точки:</string>
    <string name="label_forwarder">Экспедитор:</string>
    <string name="label_order_type">○ Тип заказа</string>
    <string name="label_order_total_weight">• Общий вес заказа:</string>
    <string name="label_order_total_capacity">• Общий объём заказа:</string>
    <string name="label_reference_point">• Ориентир:</string>
    <string name="label_cash">• Сумма:</string>
    <string name="label_delivery_date">Дата доставки: </string>
    <string name="label_customer">Клиент:</string>
    <string name="label_total_capacity">Общий объём:</string>
    <string name="label_total_weight">Общий вес:</string>
    <string name="label_status2">Статус:</string>
    <string name="label_kam">КАМ</string>
    <string name="label_osdo">ОСДО</string>
    <string name="label_simple">ОБЫЧНЫЙ</string>
    <string name="order_statuses">Статусы заказа</string>
    <string name="order_status_saved_locale">Сохранён на телефоне</string>
    <string name="order_status_complete">Закрыт</string>
    <string name="order_status_for_shipment">Создан</string>
    <string name="order_status_part_delivery">Частично доставлен</string>
    <string name="order_status_cancel_delivery">Отменён</string>
    <string name="order_status_on_the_way">В пути</string>
    <string name="order_status_delivered">Доставлен</string>
    <string name="order_status_paid">Оплачен</string>
    <string name="order_show_all">Показать все заказы</string>
    <string name="menu_take_cash_from_forwarder">Сбор ден-ых средств у эксп-ов</string>
    <string name="menu_package">Посылки</string>
    <string name="menu_transfer_cash">Наловые расходы</string>
    <string name="menu_exchange_cash">Конвертация</string>
    <string name="menu_logout">Выход из учётной записи</string>
    <string name="menu_refresh">Обновить данные</string>
    <string name="menu_refresh_dealers">Обновить данные по дилерам</string>
    <string name="other_income">Прочие приходы</string>
    <string name="history">История РКО</string>
    <string name="contract">Договоры</string>
</resources>