<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="17sp"
        android:text="@string/order_statuses"/>
    <RadioGroup
        android:id="@+id/rgFilterVariant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbOrdStatusAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_show_all"
            android:tag="0"/>
        <RadioButton
            android:id="@+id/rbOrdStatusSavedLocale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_saved_locale"
            android:tag="300"/>
        <RadioButton
            android:id="@+id/rbOrdStatusMade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_for_shipment"
            android:tag="1"/>
        <RadioButton
            android:id="@+id/rbOrdStatusOnTheWay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_on_the_way"
            android:tag="6"/>
        <RadioButton
            android:id="@+id/rbOrdStatusDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_delivered"
            android:tag="2"/>
        <RadioButton
            android:id="@+id/rbOrdStatusPaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_paid"
            android:tag="3"/>
        <RadioButton
            android:id="@+id/rbOrdStatusClosed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_complete"
            android:tag="4"/>
        <RadioButton
            android:id="@+id/rbOrdStatusCanceled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_cancel_delivery"
            android:tag="5"/>
    </RadioGroup>
</LinearLayout>