<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:background="#dfdfdf">
    <!-- address -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_address"/>
        <TextView
            android:id="@+id/elvDLChildAddress"
            style="@style/elv_text"/>
    </LinearLayout>
    <!-- reference point -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_reference_point"/>
        <TextView
            android:id="@+id/elvDLChildRefPoint"
            style="@style/elv_text"/>
    </LinearLayout>
    <!-- contact person -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_contact_person"/>
        <TextView
            android:id="@+id/elvDLChildContPerson"
            style="@style/elv_text"
            android:textColor="@color/elv_child_selector"/>
    </LinearLayout>
    <!-- agent -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_agent"/>
        <TextView
            android:id="@+id/elvDLChildAgent"
            style="@style/elv_text"
            android:textColor="@color/elv_child_selector"/>
    </LinearLayout>
    <!-- capacity -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_order_total_capacity"/>
        <TextView
            android:id="@+id/elvDLChildCapacity"
            style="@style/elv_text"/>
    </LinearLayout>
    <!-- weight -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_order_total_weight"/>
        <TextView
            android:id="@+id/elvDLChildWeight"
            style="@style/elv_text"/>
    </LinearLayout>
    <!-- weight -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_cash"/>
        <TextView
            android:id="@+id/elvDLChildCash"
            style="@style/elv_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDLGoods"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_goods"/>
        <Button
            android:id="@+id/btnDLTakeCash"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_take_cash2"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnDLOnTheWay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_on_the_way"/>
        <Button
            android:id="@+id/btnDLComplete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_end_delivery"/>
    </LinearLayout>
</LinearLayout>