<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="150dp"
    android:padding="10dp"
    android:gravity="center">
    <RadioGroup
        android:id="@+id/orderRGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rbDelivered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_delivered"
            android:tag="4"/>
        <RadioButton
            android:id="@+id/rbPartDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textSize="15sp"
            android:text="@string/order_status_part_delivery"
            android:tag="5"/>
        <RadioButton
            android:id="@+id/rbCancelDelivery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/order_status_cancel_delivery"
            android:tag="6"/>
    </RadioGroup>
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/sReasons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp">
    </android.support.v7.widget.AppCompatSpinner>
    <EditText
        android:id="@+id/etReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:minHeight="50dp"
        android:layout_marginLeft="30dp"
        android:hint="@string/hint_comment"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialogBtn1"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/dialog_btn_cancel"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/dialogBtn2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/dialog_btn_ok"/>
    </LinearLayout>
</LinearLayout>