<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="50dp"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_vertical"
    android:background="#dfdfdf">
    <!-- address -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_address"/>
        <TextView
            android:id="@+id/elvCCChildAddress"
            style="@style/elv_text"/>
    </LinearLayout>
    <!-- reference point -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_reference_point"/>
        <TextView
            android:id="@+id/elvCCChildRefPoint"
            style="@style/elv_text"/>
    </LinearLayout>
    <!-- contact person -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_contact_person"/>
        <TextView
            android:id="@+id/elvCCChildContPerson"
            style="@style/elv_text"
            android:textColor="@color/elv_child_selector"/>
    </LinearLayout>
    <!-- cash -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/elv_label"
            android:text="@string/label_cash"/>
        <TextView
            android:id="@+id/elvCCChildCash"
            style="@style/elv_text"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnCCTake"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_take_cash"/>
</LinearLayout>